# DildonicaFrontend

./: CLAUDE.md  Cargo.toml
src/: exponential_average.rs  main.rs  midi.rs  midi_mpe.rs
src/config/: app.rs  device.rs  midi.rs  mod.rs  zones.rs
src/gui/: app.rs  config_ui.rs  midi_ui.rs  mod.rs  plot.rs
