[package]
name = "dildonicaFrontend"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2"
btleplug = "0.10"
tokio = { version = "1", features = ["full"] }
uuid = "1.3"
thiserror = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
crossbeam = "0.8"
plotters = "0.3.6"
eframe = "0.28.1"
egui_plot = "0.28.1"
midir = "*"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
